--- a/Pages/Masterpizza.razor
+++ b/Pages/Masterpizza.razor
@@ -29,8 +29,9 @@
                             <td>@p.ukuranpizzaDeskirpsi</td>
                             <td>@p.JenisSaus</td>
                             <td>@p.Crust</td>
-                            <td> <button class="btn btn-primary" @onclick="() => selpizza(p)">Select</button>
-                            </td>
+                            <td><button class="btn btn-primary" @onclick="() =>selpizza(p)">Select</button>
+                            </td> 
+                            
                             </tr>
 
                     }
@@ -40,34 +41,33 @@
                     <DataAnnotationsValidator/>
 
                     <div class="form-group">
-                        <label for="nama pizza">nama pizza</label>
-                        <InputText @bind-Value=pz.NamaPizza class="form-control" id="nama pizza"/>
+                        <label for="namaPizza">nama pizza</label>
+                        <InputText @bind-Value=pz.NamaPizza class="form-control" id="namaPizza"/>
                         </div>
                         <div class="form-group">
-                            <label for="ukuran pizza">ukuran pizza</label>
-                            <InputSelect @bind-Value=pz.UkuranPizza class="form-control" id="ukuran pizza">
+                            <label for="up">ukuran pizza</label>
+                            <InputSelect @bind-Value=pz.UkuranPizza class="form-control" id="up">
                             <option value="1" selected>Besar</option>
-                            <option value="2" selected>kecil</option>
+                            <option value="2">kecil</option>
                             </InputSelect>
-                            </div>
+                        </div>
                             <div class="form-group">
-                                <label for="jenis saus">jenis saus</label>
-                                <InputText @bind-Value=pz.JenisSaus class="form-control" id="jenis saus"/>
+                                <label for="jenisSaus">jenis saus</label>
+                                <InputText @bind-Value=pz.JenisSaus class="form-control" id="jenisSaus"/>
                                 </div>
                                 <div class="form-group">
-                                    <label for="crust">crust</label>
-                                    <InputText @bind-Value=pz.Crust class="form-control" id="crust"/>
-                                   
+                                    <label for="Crust">crust</label>
+                                    <InputText @bind-Value=pz.Crust class="form-control" id="Crust"/>
                                 </div>
-                                @if (pz.Id == 0){
-                                    <input type="submit" class="btn btn-primary" value="Save"/>
-                                }else{
-                                    <input type="submit" class="btn btn-primary" value="update"/>
-                                    <button class="btn btn-secondary" @onclick="deletepz">delete</button>
-                                    <button class="btn btn-secondary" @onclick="cancelpz">cancel</button>
-                                }
-                </EditForm>
-                
+                               @if(pz.Id == 0){
+                                <input type="submit" class="btn btn-primary" value="save"/>
+                               } else{
+                                <input type="submit" class="btn btn-primary" value="update"/>
+                                <button class="btn btn-secondary" @onclick="deletepz">delete</button>
+                                <button class="btn btn-secondary" @onclick="cancelpz">cancel</button>
+                               }
+                                
+                </EditForm>               
 }
 
 @code {
@@ -92,13 +92,13 @@
             void SaveData(EditContext e){
                 if(pz.Id == 0){
                     pzz.addpizza(pz);
-                    notif = "Pizza Sukses di Save data";
+                    notif ="sukses dalam melakukan add";
                 }else{
                     pzz.updatepizza(pz);
-                    notif = "sukses update Data";
+                    notif ="data sukses di update";
                     StateHasChanged();
                 }
-                pz = new Pizza();
+                pz= new Pizza();
                 allpzz = pzz.GetPizza();
             }
             void deletepz(){
